# proxy-lite

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
src/proxy_lite/: __init__.py  app.py  cli.py  client.py  gif_maker.py  gif_marker.py  history.py  logger.py  recorder.py  runner.py  serializer.py
src/proxy_lite/agents/: __init__.py  agent_base.py  browser_agent.py  proxy_lite_agent.py
src/proxy_lite/browser/: add_custom_select.js  bounding_boxes.py  browser.py  find_pois.js
src/proxy_lite/configs/: default.yaml
src/proxy_lite/environments/: __init__.py  environment_base.py  webbrowser.py
src/proxy_lite/solvers/: __init__.py  simple_solver.py  solver_base.py  structured_solver.py
src/proxy_lite/tools/: __init__.py  browser_tool.py  return_tool.py  structured_data_tool.py  tool_base.py
