[project]
name = "proxy-lite"
version = "0.1.0"
description = "Proxy Lite - A mini, open-weights, version of the Convergence AI Proxy assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "omegaconf>=2.3.0",
    "openai>=1.61.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "playwright-stealth>=1.0.6",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "setuptools>=75.8.0",
    "tenacity>=9.0.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "streamlit>=1.40.2",
    "pre-commit>=4.1.0",
]

[project.scripts]
proxy = "proxy_lite.cli:main"

[project.optional-dependencies]
serving = [
    "transformers",
    "vllm==0.7.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
proxy_lite = ["**/*.json"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B", "I", "SIM"]
ignore = [
    "B028",
    "E722", # ignore bare except
    "B904", # ignore raise from requirement
    "FA102",
]
[tool.ruff.lint.flake8-bugbear]

extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "336dc69d63d56f232a183a3e7f52790429b871ef" }

